--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -333,25 +333,44 @@ fr:
   mail_subject_unassign_translation_status: "[%{team} - %{project}] Votre affectation à un élément a été annulée"
   mail_subject_assign_task: "[%{team} - %{project}] Une tâche vous a été affectée"
   mail_subject_unassign_task: "[%{team} - %{project}] Votre affectation à une tâche a été annulée"
-  mail_subject_update_status: "[%{team} - %{project}] Un média a été marqué comme %{status}"
   mail_assign_verification_status: "%{author} vous a affecté un élément intitulé "
   mail_unassign_verification_status: "%{author} a annulé votre affectation à l'élément intitulé "
   mail_assign_translation_status: "%{author} vous a affecté un élément intitulé "
   mail_unassign_translation_status: "%{author} a annulé votre affectation à l'élément intitulé "
   mail_assign_task: '%{author} vous a affecté la tâche "%{task}" dans l''élément intitulé '
   mail_unassign_task: '%{author} a annulé votre affectation à la tâche "%{task}" pour l''élément intitulé '
-  mail_update_status: '%{author} a fixé le statut de "%{title}" à %{status}.'
   mail_assign_project: "%{author} vous a affecté le projet intitulé "
   mail_unassign_project: "%{author} a annulé votre affectation au projet intitulé "
   mail_subject_assign_project: "[%{team} - %{project}] Un projet vous a été affecté"
   mail_subject_unassign_project: "[%{team} - %{project}] Votre affectation à un projet a été annulée"
   mail_subject_delete_user: "[%{team}] Un compte a été supprimé"
   mail_body_delete_user: Un compte d'utilisateur a été supprimé; les éléments associés ont été rattachés à l'usager anonyme %{id}
+  mails_notifications:
+    greeting: "Bonjour %{username},"
+    project_view: "Ouvrir le projet"
+    unsubscribe: 'Se désabonner'
+    unsubscribe_link: "%{unsubscribe} de ces notifications"
+    copyright_html: "%{app_name} par <a href=\"https://meedan.com\">Meedan</a>"
+    task_resolved:
+      subject: "[%{team} - %{project}] Une tâche a été répondue"
+      header_title: 'Tâches répondues'
+      header_text: "%{author} a répondu à une tâche du projet %{project} dans %{team}."
+      section_title: 'Qui ou quelle est la source de la déclaration ?'
+      status: 'Statut'
+      media_h: 'Média'
+    media_status:
+      label: 'média'
+      subject: "[%{team} - %{project}] Un élément a été marqué comme %{status}"
+      header_title: 'Statut mis à jour'
+      header_text: "%{author} a modifié un élément du projet %{project} dans %{team}."
+      section_title: "Marqué comme %{status}."
+      added_to: "Ajouté à %{app_name}"
+      update_h: 'Dernière mise à jour'
+      tasks_h: 'Tâches complétées'
   mail_security:
     device_subject: "Alerte de sécurité : Nouvelle connexion à %{app_name} de %{browser} sur %{platform}"
     ip_subject: "Alerte de sécurité : Connexion à %{app_name} nouvelle ou inhabituelle"
     failed_subject: "Alerte de sécurité : Tentatives de connexion échouées à %{app_name} "
-    greeting: "Bonjour %{username},"
     ip: "Vous vous êtes connecté.e de %{location}"
     device: "Vous vous êtes connecté.e à partir de %{browser} sur %{platform}"
     devise_name: "%{browser} sur %{platform}"
@@ -370,7 +389,6 @@ fr:
     manage_text: 'Gérer'
     privace_manage_plain: "Gérer vos notifications par e-mail"
     privacy_plain: "En savoir plus sur notre politique de confidentialité "
-    copyright_html: "%{app_name} par <a href=\"https://meedan.com\">Meedan</a>"
   archive_keep_backup: Video Vault
   archive_pender_archive: copies d'écran de Keep
   archive_archive_is: Archive.is
